clusters/home-lab/cdk8s_definitions/dist/home-assistant/home-assistant.k8s.yaml
apiVersion: v1
kind: Service
metadata:
    labels:
        app: home-assistant-20.0.10
        app.kubernetes.io/instance: home-assistant
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: home-assistant
        app.kubernetes.io/version: 2023.10.1
        helm-revision: "1"
        helm.sh/chart: home-assistant-20.0.10
        release: home-assistant
        service.name: main
    name: home-assistant
    namespace: prod-iot
spec:
    ports:
        - name: main
          port: 8123
          protocol: TCP
          targetPort: 8123
    publishNotReadyAddresses: false
    selector:
        app.kubernetes.io/instance: home-assistant
        app.kubernetes.io/name: home-assistant
        pod.name: main
    type: ClusterIP
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2023-10-18T00:39:43Z"
    mac: ENC[AES256_GCM,data:8hetI/sYt6MGScZ1xCJtIW7vm0ys/IUT0Xot0JihuHamogn8qedsC+2Da7MEjrgpDFCzFZwPxVZH4YmbFYDRtys1ShbucvGgMDmbOBrnplqGqZZc4mS195wK55Ts4Dt7gcvaZRDgy38iaEMpyLoJs3iCUMca6wXU6Ne6P5GfxuE=,iv:6hjqZzVfYqH0wnYceju5b3gm31Eg7uO1em02kXze4rY=,tag:T7NKtE0rfMSMPo/tooezhA==,type:str]
    pgp:
        - created_at: "2023-10-18T00:39:43Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA6U2wmTOeuydAQ/+J/GGo4ZfRS2dUdEDzDj4M/z+fB450GBWxS9266UhiILF
[...]
            qosD8hic
            =X4Ui
            -----END PGP MESSAGE-----
          fp: 700A165BB7D5DDC51DEDF3C5CBA59BAF26217FDB
    encrypted_regex: ^(data|stringData)$
    version: 3.8.1
---
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        app: home-assistant-20.0.10
        app.kubernetes.io/instance: home-assistant
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: home-assistant
        app.kubernetes.io/version: 2023.10.1
        helm-revision: "1"
        helm.sh/chart: home-assistant-20.0.10
        release: home-assistant
    name: home-assistant
    namespace: prod-iot
spec:
    replicas: 1
    revisionHistoryLimit: 3
    selector:
        matchLabels:
            app.kubernetes.io/instance: home-assistant
            app.kubernetes.io/name: home-assistant
            pod.name: main
    strategy:
        type: Recreate
    template:
        metadata:
            annotations: {}
            labels:
                app: home-assistant-20.0.10
                app.kubernetes.io/instance: home-assistant
                app.kubernetes.io/managed-by: Helm
                app.kubernetes.io/name: home-assistant
                app.kubernetes.io/version: 2023.10.1
                helm-revision: "1"
                helm.sh/chart: home-assistant-20.0.10
                pod.name: main
                release: home-assistant
        spec:
            automountServiceAccountToken: false
            containers:
                - env:
                    - name: TZ
                      value: UTC
                    - name: UMASK
                      value: "0022"
                    - name: UMASK_SET
                      value: "0022"
                    - name: PUID
                      value: "568"
                    - name: USER_ID
                      value: "568"
                    - name: UID
                      value: "568"
                    - name: PGID
                      value: "568"
                    - name: GROUP_ID
                      value: "568"
                    - name: GID
                      value: "568"
                  image: tccr.io/truecharts/home-assistant:v2023.10.1@sha256:6b961048427e973e7bca4e9ff4e1ed3b269f1432aa0d43735cdc4a406201124a
                  imagePullPolicy: IfNotPresent
                  livenessProbe:
                    failureThreshold: 5
                    httpGet:
                        path: /
                        port: 8123
                        scheme: HTTP
                    initialDelaySeconds: 10
                    periodSeconds: 10
                    successThreshold: 1
                    timeoutSeconds: 5
                  name: home-assistant
                  ports:
                    - containerPort: 8123
                      name: main
                      protocol: TCP
                  readinessProbe:
                    failureThreshold: 5
                    httpGet:
                        path: /
                        port: 8123
                        scheme: HTTP
                    initialDelaySeconds: 10
                    periodSeconds: 10
                    successThreshold: 2
                    timeoutSeconds: 5
                  resources:
                    limits:
                        cpu: 200m
                        memory: 300Mi
                    requests:
                        cpu: 200m
                        memory: 300Mi
                  securityContext:
                    allowPrivilegeEscalation: false
                    capabilities:
                        add:
                            - CAP_NET_RAW
                            - CAP_NET_BIND_SERVICE
                            - CHOWN
                            - SETUID
                            - SETGID
                            - FOWNER
                            - DAC_OVERRIDE
                        drop:
                            - ALL
                    privileged: false
                    readOnlyRootFilesystem: false
                    runAsGroup: 0
                    runAsNonRoot: false
                    runAsUser: 0
                    seccompProfile:
                        type: RuntimeDefault
                  startupProbe:
                    failureThreshold: 60
                    initialDelaySeconds: 10
                    periodSeconds: 5
                    successThreshold: 1
                    tcpSocket:
                        port: 8123
                    timeoutSeconds: 2
                  stdin: false
                  tty: false
                  volumeMounts:
                    - mountPath: /config
                      name: config
                      readOnly: false
                    - mountPath: /dev/shm
                      name: devshm
                      readOnly: false
                    - mountPath: /shared
                      name: shared
                      readOnly: false
                    - mountPath: /tmp
                      name: tmp
                      readOnly: false
                    - mountPath: /var/logs
                      name: varlogs
                      readOnly: false
                    - mountPath: /var/run
                      name: varrun
                      readOnly: false
            dnsConfig:
                options:
                    - name: ndots
                      value: "1"
            dnsPolicy: ClusterFirst
            enableServiceLinks: false
            hostNetwork: false
            hostPID: false
            restartPolicy: Always
            securityContext:
                fsGroup: 568
                fsGroupChangePolicy: OnRootMismatch
                supplementalGroups:
                    - 568
                sysctls: []
            serviceAccountName: default
            shareProcessNamespace: false
            terminationGracePeriodSeconds: 60
            volumes:
                - name: config
                  persistentVolumeClaim:
                    claimName: home-assistant
                - emptyDir:
                    medium: Memory
                  name: devshm
                - configMap:
                    defaultMode: 511
                    name: home-assistant-init
                    optional: false
                  name: init
                - emptyDir: {}
                  name: shared
                - emptyDir: {}
                  name: tmp
                - emptyDir: {}
                  name: varlogs
                - emptyDir:
                    medium: Memory
                  name: varrun
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2023-10-18T00:39:43Z"
    mac: ENC[AES256_GCM,data:8hetI/sYt6MGScZ1xCJtIW7vm0ys/IUT0Xot0JihuHamogn8qedsC+2Da7MEjrgpDFCzFZwPxVZH4YmbFYDRtys1ShbucvGgMDmbOBrnplqGqZZc4mS195wK55Ts4Dt7gcvaZRDgy38iaEMpyLoJs3iCUMca6wXU6Ne6P5GfxuE=,iv:6hjqZzVfYqH0wnYceju5b3gm31Eg7uO1em02kXze4rY=,tag:T7NKtE0rfMSMPo/tooezhA==,type:str]
    pgp:
        - created_at: "2023-10-18T00:39:43Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA6U2wmTOeuydAQ/+J/GGo4ZfRS2dUdEDzDj4M/z+fB450GBWxS9266UhiILF
[...]
            qosD8hic
            =X4Ui
            -----END PGP MESSAGE-----
          fp: 700A165BB7D5DDC51DEDF3C5CBA59BAF26217FDB
    encrypted_regex: ^(data|stringData)$
    version: 3.8.1
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    annotations:
        traefik.ingress.kubernetes.io/router.entrypoints: websecure
        traefik.ingress.kubernetes.io/router.middlewares: tc-system-chain-basic@kubernetescrd
    labels:
        app: home-assistant-20.0.10
        app.kubernetes.io/instance: home-assistant
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: home-assistant
        app.kubernetes.io/version: 2023.10.1
        helm-revision: "1"
        helm.sh/chart: home-assistant-20.0.10
        release: home-assistant
    name: home-assistant
    namespace: prod-iot
spec:
    rules:
        - host: home-assistant.st0rmingbr4in.com
          http:
            paths:
                - backend:
                    service:
                        name: home-assistant
                        port:
                            number: 8123
                  path: /
                  pathType: Prefix
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2023-10-18T00:39:43Z"
    mac: ENC[AES256_GCM,data:8hetI/sYt6MGScZ1xCJtIW7vm0ys/IUT0Xot0JihuHamogn8qedsC+2Da7MEjrgpDFCzFZwPxVZH4YmbFYDRtys1ShbucvGgMDmbOBrnplqGqZZc4mS195wK55Ts4Dt7gcvaZRDgy38iaEMpyLoJs3iCUMca6wXU6Ne6P5GfxuE=,iv:6hjqZzVfYqH0wnYceju5b3gm31Eg7uO1em02kXze4rY=,tag:T7NKtE0rfMSMPo/tooezhA==,type:str]
    pgp:
        - created_at: "2023-10-18T00:39:43Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA6U2wmTOeuydAQ/+J/GGo4ZfRS2dUdEDzDj4M/z+fB450GBWxS9266UhiILF
[...]
            qosD8hic
            =X4Ui
            -----END PGP MESSAGE-----
          fp: 700A165BB7D5DDC51DEDF3C5CBA59BAF26217FDB
    encrypted_regex: ^(data|stringData)$
    version: 3.8.1
